fix: footer overflow

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -93,7 +93,7 @@
 .yellow, .view-Home
   color: $color-yellow
   .footerform
-    input, .markdown p, button
+    input, .markdown p, button, h4
       color: black
 .blue, .view-Brands, .view-BrandSingle
   color: $color-blue
@@ -106,7 +106,7 @@
 .white, .view-People
   color: white
   .footerform
-    input, .markdown p, button
+    input, .markdown p, button, h4
       color: black
 
 section
@@ -420,6 +420,7 @@ section
   min-height: 100vh
   justify-content: space-around
   padding: var(--spacing-three)
+  overflow: hidden
   &-Buttons
     display: flex
     justify-content: space-between
